--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
+      integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
   </head>
   <body>
     <div id="modal-root"></div>
