--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,13 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
+    <!-- 나눔명조 -->
+    <!-- notosans -->
+    <!-- 나눔명조 손글씨 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100..900&display=swap"
       rel="stylesheet"
     />
   </head>
